tests/NormalTests/paczka1/fuzzy1/38676764.err
Error in line 20: EZJgT S897 70,3
Error in line 22: EZJgT S958 96,1
Error in line 24: EZJgT S299 67,8
Error in line 27: gUt0QrvmpI S299 86,6
Error in line 7: S897 S299 23,1
Error in line 34: EZJgT S958 19,0
